chore: update package name to obscura-icons and publish to NPM
- Changed package name from 'obscura' to 'obscura-icons' due to name conflict
- Successfully published v1.0.0 to NPM registry
- Updated all documentation and examples with new package name
- Package is now available at: npm install obscura-icons

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "obscura",
+  "name": "obscura-icons",
   "version": "1.0.0",
   "description": "A minimal React icon library with unique, rare, and niche icons that other libraries miss",
   "main": "dist/index.js",
