feat: major update - 22 icons, GitHub Pages deployment, updated URLs
🎯 New Icons Added (9 new):
- AgentFlow: Agentic workflow icon
- ToolCall: AI tools calling external functions
- MemoryBank: Persistent memory or context
- GrowthArrow: Startup-style growth graph
- FunnelConversion: Conversion funnel illustration
- BetaBadge: Apps in beta/testing phase
- CliTerminal: Dev terminal or CLI icon
- JwtToken: JWT / auth tokens
- ConfigFile: Config/JSON/YAML file icon

🌐 GitHub Pages Setup:
- Added automated deployment workflow
- Updated all URLs to point to GitHub Pages
- Website ready at: shade-solutions.github.io/obscura

📊 Library Stats:
- Total Icons: 22 (up from 13)
- Categories: AI & Automation (8), SaaS & Analytics (7), Developer Tools (6), UI Widgets (1)
- Version bump: 1.0.0 → 1.1.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "obscura-icons",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A minimal React icon library with unique, rare, and niche icons that other libraries miss",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -36,7 +36,7 @@
     "type": "git",
     "url": "https://github.com/shade-solutions/obscura.git"
   },
-  "homepage": "https://obscura.shade.so",
+  "homepage": "https://shade-solutions.github.io/obscura",
   "bugs": {
     "url": "https://github.com/shade-solutions/obscura/issues"
   },
